# Training

project/cmake_test/: CMakeLists.txt  main.cpp
project/cmake_test/lib/: CMakeLists.txt
project/cmake_test/lib/inc/: test.h
project/cmake_test/lib/src/: test.cpp
project/cmake_test2/: CMakeLists.txt  main.cpp
project/cmake_test2/inc/: test2.h
project/cmake_test2/src/: test2.cpp
